--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,127 @@
     @apply bg-background text-foreground;
   }
 }
+
+.heroBgOne {
+  background-image: url("../../public/mini-banner-1.jpg");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.heroBgTwo {
+  background-image: url("../../public/mini-banner-2.jpg");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+
+.fixed-nav {
+  position: fixed;
+  top: 0;
+  background: #ffffff;
+  color: rgb(0, 0, 0);
+  z-index: 999;
+  width: 100%;
+  background: rgba(226, 226, 226, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  transition: all 0.5 ease-in;
+}
+.hide-upper {
+  display: none !important;
+  transition: all 0.5 ease-in;
+}
+.upper {
+  padding: 16px 0;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+hr {
+  color: black;
+}
+.navbar-brand {
+  font-size: 1.6rem !important;
+  font-weight: 600;
+}
+
+.nav__right i {
+  font-size: 1.3rem;
+  border: 1px solid rgb(206, 206, 206);
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.menu a {
+  margin: auto 1rem;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .upper-wrapper .upper {
+    font-size: 0.5rem;
+  }
+  .navbar-brand {
+    word-spacing: 5px !important;
+    font-size: 1rem !important;
+  }
+
+  .navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.425);
+    z-index: 99;
+    display: none;
+  }
+  .menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 100%;
+    background: #fff;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    line-height: 20px;
+    z-index: 100;
+  }
+  .menu a {
+    margin: 20px auto;
+  }
+
+  .show__menu {
+    display: block;
+  }
+  .nav__right i {
+    border: 0;
+    outline: 0;
+    font-size: 1rem;
+    padding: 0.6rem;
+  }
+  .nav__right span {
+    height: 12px;
+    width: 12px;
+    bottom: 12px;
+    right: 4px;
+  }
+  .upper-wrapper {
+    display: none;
+  }
+  .navbar-brand {
+    word-spacing: 5px !important;
+    font-size: 1rem !important;
+    margin-left: 20px;
+  }
+}
+
+.hide {
+  display: none;
+}
