--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,30 @@
   background-position: center;
 }
 
+.promotion {
+  position: relative;
+  background-image: url("../../public/shop-banner.jpg");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.promotion::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.promotion > * {
+  position: relative;
+  z-index: 2;
+}
 .megaBg {
   background-image: url("../../public/big-banner.jpg");
   width: 100%;
